[project]
name = "gemini-langchain-oauth-demo"
version = "0.1.0"
description = "LangChain + Gemini OAuth Demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth>=2.34.0",
    "langchain-google-vertexai>=2.0.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
